// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInjectables given component and sync dependencies, when rendered, renders with dependencies 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-injectable-value"
</div>
`;

exports[`withInjectables given component, no placeholder and async dependencies, when rendered when the dependency resolves renders 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-async-value"
</div>
`;

exports[`withInjectables given component, placeholder and async dependencies, when rendered renders as placeholder 1`] = `
<div
  data-placeholder-test="true"
/>
`;

exports[`withInjectables given component, placeholder and async dependencies, when rendered when the dependency resolves renders 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-async-value"
</div>
`;

exports[`withInjectables given component, props and a dependency using instantiation parameter, when rendered, renders with the dependency having props as instantiation parameter 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-injectable-value: some-instantiation-parameter-value"
</div>
`;
